# Mizu

./: .gitattributes  .gitignore  Application.cpp  Application.hpp  CMakeLists.txt  Helpers.h  LICENSE  Mizu.sln  Mizu.vcxproj  Mizu.vcxproj.filters  README.md  demo.cpp  demo_main.cpp  main.cpp  main2.cpp  shaders.hlsl
.github/workflows/: windows.yml
CubeDemo/: CMakeLists.txt  CubeDemo.cpp  CubeDemo.hpp  main.cpp
CubeDemo/shaders/: VertexShader.hlsl
DX/: CMakeLists.txt  Helpers.h
Engine/: .clang-format  CMakeLists.txt
Engine/include/Mizu/: Application.hpp  ByteAddressBuffer.h  CommandList.hpp  CommandQueue.hpp  ConstantBuffer.h  DX12LibPCH.h  DescriptorAllocation.hpp  DescriptorAllocator.hpp  DescriptorAllocatorPage.hpp  DynamicDescriptorHeap.hpp  EventArgs.hpp  Game.hpp  GenerateMipsPSO.h  KeyCodes.h  KeyCodes.hpp  Logger.hpp  PanoToCubemapPSO.h  Resource.hpp  ResourceStateTracker.h  ResourceStateTracker.hpp  ResourceTracker.hpp  RootSignature.h  RootSignature.hpp  StructuredBuffer.h  Texture.h  UploadBuffer.hpp  Utils.hpp  Window.hpp
Engine/src/: Application.cpp  CommandList.cpp  CommandQueue.cpp  DescriptorAllocation.cpp  DescriptorAllocator.cpp  DescriptorAllocatorPage.cpp  DynamicDescriptorHeap.cpp  Game.cpp  Resource.cpp  ResourceStateTracker.cpp  RootSignature.cpp  UploadBuffer.cpp  Window.cpp
Experiments/: CMakeLists.txt
Experiments/ThousandTriangles/: CMakeLists.txt  DXSampleHelper.h  Main.cpp  ThousandTriangles.cpp  ThousandTriangles.h
Experiments/ThousandTriangles/resources/: MeshShader.hlsl  ThousandTrianglesPixelShader.hlsl  ThousandTrianglesVertexShader.hlsl
GameTest/TestingProject/: TestingProject.sln
GameTest/TestingProject/TestingProject/: CMakeLists.txt  Game.cpp  Game.h  Main.cpp  pch.h
expirements/triangle/: CMakeLists.txt  D3D12HelloTriangle.cpp  D3D12HelloTriangle.h  Main.cpp  shaders.hlsl
expirements/triangle/resources/: shaders.hlsl
inc/: Application.hpp  CommandQueue.hpp  CubeDemo.hpp  EventArgs.hpp  Events.h  Game.hpp  Utils.hpp  Window.hpp
shaders/: VertexShader.hlsl
src/: Application.cpp  CommandQueue.cpp  CubeDemo.cpp  Game.cpp  Window.cpp
